--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -236,15 +236,34 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          sed -i -e 's|Homepage: https://rustdesk.com|Homepage: ${{ fromJson(inputs.extras).urlLink }}|' ./build.py
-          sed -i -e 's|launchUrl(Uri.parse('https://rustdesk.com'));|launchUrl(Uri.parse('${{ fromJson(inputs.extras).urlLink }}'));|' ./flutter/lib/common.dart
-          sed -i -e 's|launchUrlString('https://rustdesk.com');|launchUrlString('${{ fromJson(inputs.extras).urlLink }}');|' ./flutter/lib/desktop/pages/desktop_setting_page.dart
-          sed -i -e 's|launchUrlString('https://rustdesk.com/privacy.html')|launchUrlString('${{ fromJson(inputs.extras).urlLink }}/privacy.html')|' ./flutter/lib/desktop/pages/desktop_setting_page.dart
-          sed -i -e 's|const url = 'https://rustdesk.com/';|const url = '${{ fromJson(inputs.extras).urlLink }}';|' ./flutter/lib/mobile/pages/settings_page.dart
-          sed -i -e 's|launchUrlString('https://rustdesk.com/privacy.html')|launchUrlString('${{ fromJson(inputs.extras).urlLink }}/privacy.html')|' ./flutter/lib/mobile/pages/settings_page.dart
-          sed -i -e 's|https://rustdesk.com/privacy.html|${{ fromJson(inputs.extras).urlLink }}/privacy.html|' ./flutter/lib/desktop/pages/install_page.dart
-          sed -i -e 's|https://rustdesk.com/|${{fromJson(inputs.extras).urlLink }}|' ./res/setup.nsi
-
+          # Use double quotes for the sed commands to allow variable expansion
+          sed -i -e "s|Homepage: https://rustdesk.com|Homepage: ${{ fromJson(inputs.extras).urlLink }}|" ./build.py
+            
+          # Check if file exists before attempting to modify
+          if [ -f "./flutter/lib/common.dart" ]; then
+            sed -i -e "s|launchUrl(Uri.parse('https://rustdesk.com'))|launchUrl(Uri.parse('${{ fromJson(inputs.extras).urlLink }}'))|" ./flutter/lib/common.dart
+          fi
+            
+          if [ -f "./flutter/lib/desktop/pages/desktop_setting_page.dart" ]; then
+            sed -i -e "s|launchUrlString('https://rustdesk.com')|launchUrlString('${{ fromJson(inputs.extras).urlLink }}')|" ./flutter/lib/desktop/pages/desktop_setting_page.dart
+            sed -i -e "s|launchUrlString('https://rustdesk.com/privacy.html')|launchUrlString('${{ fromJson(inputs.extras).urlLink }}/privacy.html')|" ./flutter/lib/desktop/pages/desktop_setting_page.dart
+          fi
+            
+          if [ -f "./flutter/lib/mobile/pages/settings_page.dart" ]; then
+            sed -i -e "s|const url = 'https://rustdesk.com/'|const url = '${{ fromJson(inputs.extras).urlLink }}'|" ./flutter/lib/mobile/pages/settings_page.dart
+            sed -i -e "s|launchUrlString('https://rustdesk.com/privacy.html')|launchUrlString('${{ fromJson(inputs.extras).urlLink }}/privacy.html')|" ./flutter/lib/mobile/pages/settings_page.dart
+          fi
+            
+          if [ -f "./flutter/lib/desktop/pages/install_page.dart" ]; then
+            sed -i -e "s|https://rustdesk.com/privacy.html|${{ fromJson(inputs.extras).urlLink }}/privacy.html|" ./flutter/lib/desktop/pages/install_page.dart
+          fi
+            
+          if [ -f "./res/setup.nsi" ]; then
+            sed -i -e "s|https://rustdesk.com/|${{ fromJson(inputs.extras).urlLink }}|" ./res/setup.nsi
+          else
+            echo "Warning: ./res/setup.nsi not found, skipping URL replacement for this file"
+          fi
+      
       - name: change download link to custom
         if: fromJson(inputs.extras).downloadLink != 'https://rustdesk.com/download'
         continue-on-error: true
