--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -456,19 +456,19 @@ jobs:
         continue-on-error: true
         if: fromJson(inputs.extras).hidecm == 'true'
         run: |
-          # Show current directory structure
-          Write-Host "Current directory: $(Get-Location)"
-          Write-Host "Directory contents:"
-          Get-ChildItem -Path .
-            
-          # Check if flutter directory exists
+          Write-Host "Applying updated hidecm patch"
           if (Test-Path -Path "flutter") {
             Write-Host "Flutter directory exists"
-            Invoke-WebRequest -Uri https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/hidecm.diff -OutFile hidecm.diff
-            git apply hidecm.diff
+            Invoke-WebRequest -Uri https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/hidecm_updated.diff -OutFile hidecm_updated.diff
+            git apply hidecm_updated.diff
+            if ($LASTEXITCODE -ne 0) {
+              Write-Host "Failed to apply patch, attempting with --reject option"
+              git apply --reject hidecm_updated.diff || echo "Applied what could be applied, check .rej files"
+            }
           } else {
-            Write-Host "Flutter directory not found - cannot apply hidecm.diff"
+            Write-Host "Flutter directory not found - cannot apply hidecm patch"
           }
+        
 
       - name: removeNewVersionNotif
         continue-on-error: true
