refactor: replace hidecm patch with direct sed modifications to enable hide-cm functionality

--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -455,19 +455,40 @@ jobs:
       - name: hide-cm
         continue-on-error: true
         if: fromJson(inputs.extras).hidecm == 'true'
+        shell: bash
         run: |
-          Write-Host "Applying updated hidecm patch"
-          if (Test-Path -Path "flutter") {
-            Write-Host "Flutter directory exists"
-            Invoke-WebRequest -Uri https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/hidecm.diff -OutFile hidecm.diff
-            git apply hidecm.diff
-            if ($LASTEXITCODE -ne 0) {
-              Write-Host "Failed to apply patch, attempting with --reject option"
-              git apply --reject hidecm.diff || echo "Applied what could be applied, check .rej files"
-            }
-          } else {
-            Write-Host "Flutter directory not found - cannot apply hidecm patch"
-          }
+          echo "Applying hide-cm changes directly with sed"
+          if [ -f "flutter/lib/models/server_model.dart" ]; then
+            # Change bool hideCm to bool _hideCm
+            sed -i 's/bool hideCm = false;/bool _hideCm = false;/' flutter/lib/models/server_model.dart
+            # Add getter
+            sed -i '/bool get clipboardOk => _clipboardOk;/a \
+              bool get hideCm => _hideCm;\
+              ' flutter/lib/models/server_model.dart
+            # Uncomment various blocks
+            sed -i 's/\/\*//g' flutter/lib/models/server_model.dart
+            sed -i 's/\*\///g' flutter/lib/models/server_model.dart
+            echo "Modified server_model.dart"
+          else
+            echo "server_model.dart not found"
+          fi
+
+          if [ -f "flutter/lib/main.dart" ]; then
+            # Comment out gFFI.serverModel.hideCm = hide;
+            sed -i 's/gFFI.serverModel.hideCm = hide;/\/\/ gFFI.serverModel.hideCm = hide;/' flutter/lib/main.dart
+            echo "Modified main.dart"
+          else
+            echo "main.dart not found"
+          fi
+
+          if [ -f "flutter/lib/desktop/pages/desktop_setting_page.dart" ]; then
+            # Uncomment hide_cm button
+            sed -i "s/\/\/ if (usePassword)/if (usePassword)/" flutter/lib/desktop/pages/desktop_setting_page.dart
+            sed -i "s/\/\/   hide_cm(!locked).marginOnly(left: _kContentHSubMargin - 6),/  hide_cm(!locked).marginOnly(left: _kContentHSubMargin - 6),/" flutter/lib/desktop/pages/desktop_setting_page.dart
+            echo "Modified desktop_setting_page.dart"
+          else
+            echo "desktop_setting_page.dart not found"
+          fi
         
 
       - name: removeNewVersionNotif
