--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -102,7 +102,7 @@ jobs:
         job:
           - {
               target: aarch64-apple-darwin,
-              os: macos14,
+              os: macos-latest,
               extra-build-args: "",
               arch: aarch64,
               vcpkg-triplet: arm64-osx,
