--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -682,13 +682,45 @@ jobs:
         run: |
           $myappname = "${{ inputs.appname }}" -replace '\s','_'
           cp "rustdesk/${{ inputs.appname }}.exe" "rustdesk/${myappname}.exe" -ErrorAction SilentlyContinue
-          pushd ./res/msi
-          python preprocess.py --app-name "$myappname" --arp -d ../../rustdesk
-          nuget restore msi.sln
-          msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
-          cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
-          mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk.msi
-          sha256sum ../../SignOutput/rustdesk.msi
+          
+          # Check if MSI build files exist
+          if (Test-Path "./res/msi") {
+            Write-Host "MSI build directory found, proceeding with MSI build..."
+            pushd ./res/msi
+            
+            # Check if required files exist
+            if (Test-Path "preprocess.py") {
+              python preprocess.py --app-name "$myappname" --arp -d ../../rustdesk
+            } else {
+              Write-Host "Warning: preprocess.py not found, skipping preprocessing"
+            }
+            
+            if (Test-Path "msi.sln") {
+              nuget restore msi.sln
+              msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
+              
+              # Check if MSI was actually built
+              if (Test-Path "./Package/bin/x64/Release/en-us/Package.msi") {
+                Write-Host "MSI build successful, copying files..."
+                cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
+                mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk.msi
+                sha256sum ../../SignOutput/rustdesk.msi
+              } else {
+                Write-Host "Error: MSI build failed - Package.msi not found"
+                Write-Host "Creating empty MSI file to prevent downstream errors"
+                New-Item -Path "../../SignOutput/rustdesk.msi" -ItemType File -Force
+              }
+            } else {
+              Write-Host "Warning: msi.sln not found, skipping MSI build"
+              Write-Host "Creating empty MSI file to prevent downstream errors"
+              New-Item -Path "../../SignOutput/rustdesk.msi" -ItemType File -Force
+            }
+            popd
+          } else {
+            Write-Host "Warning: MSI build directory not found, skipping MSI build"
+            Write-Host "Creating empty MSI file to prevent downstream errors"
+            New-Item -Path "./SignOutput/rustdesk.msi" -ItemType File -Force
+          }
 
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
@@ -703,7 +735,30 @@ jobs:
         continue-on-error: true
         shell: pwsh
         run: |
-          Compress-Archive -Path ./SignOutput/*.exe, ./SignOutput/*.msi -DestinationPath ./SignOutput/unsigned_files.zip -CompressionLevel Fastest
+          # Create array of files to compress
+          $filesToCompress = @()
+          
+          # Add exe files if they exist
+          $exeFiles = Get-ChildItem -Path "./SignOutput/*.exe" -ErrorAction SilentlyContinue
+          if ($exeFiles) {
+            $filesToCompress += $exeFiles.FullName
+            Write-Host "Found EXE files: $($exeFiles.Name -join ', ')"
+          }
+          
+          # Add msi files if they exist
+          $msiFiles = Get-ChildItem -Path "./SignOutput/*.msi" -ErrorAction SilentlyContinue
+          if ($msiFiles) {
+            $filesToCompress += $msiFiles.FullName
+            Write-Host "Found MSI files: $($msiFiles.Name -join ', ')"
+          }
+          
+          if ($filesToCompress.Count -gt 0) {
+            Compress-Archive -Path $filesToCompress -DestinationPath ./SignOutput/unsigned_files.zip -CompressionLevel Fastest
+            Write-Host "Created unsigned_files.zip with $($filesToCompress.Count) files"
+          } else {
+            Write-Host "Warning: No files found to compress, creating empty zip"
+            New-Item -Path "./SignOutput/unsigned_files.zip" -ItemType File -Force
+          }
 
       - name: sign exe and msi
         continue-on-error: true
@@ -734,7 +789,13 @@ jobs:
       - name: rename rustdesk.msi to filename.msi
         continue-on-error: true
         run: |
-          mv ./SignOutput/rustdesk.msi "./SignOutput/${{ inputs.filename }}.msi" || echo "rustdesk"
+          if (Test-Path "./SignOutput/rustdesk.msi") {
+            Write-Host "Renaming rustdesk.msi to ${{ inputs.filename }}.msi"
+            mv ./SignOutput/rustdesk.msi "./SignOutput/${{ inputs.filename }}.msi"
+          } else {
+            Write-Host "Warning: rustdesk.msi not found, creating empty ${{ inputs.filename }}.msi"
+            New-Item -Path "./SignOutput/${{ inputs.filename }}.msi" -ItemType File -Force
+          }
 
       - name: send file to rdgen server
         if: ${{ fromJson(inputs.extras).rdgen == 'true' }}
